--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   google_fonts: ^4.0.3
   auto_size_text: ^3.0.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
