--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
   provider: ^6.0.5
+  percent_indicator: "^2.1.7+2"
+  scrollable_positioned_list: ^0.3.5
+  scroll_navigation: ^1.3.2
+  indexed_list_view: ^2.0.1
+
+
+
+
 
 dev_dependencies:
   flutter_test:
