--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   scroll_navigation: ^1.3.2
   flutter_local_notifications: ^13.0.0
   sizer: ^2.0.15
+  awesome_notifications: ^0.6.19
+
 
 
 
