--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.originalmorals">
+    package="com.chandrachaan.resume.portfoli_web">
    <application
-        android:label="originalmorals"
+        android:label="portfoli_web"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
