--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   sizer: ^2.0.15
   awesome_notifications: ^0.6.19
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
