--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   sizer: ^2.0.15
   awesome_notifications: ^0.6.19
   cached_network_image: ^3.2.3
+  scrollable_positioned_list: ^0.3.5
 
 dev_dependencies:
   flutter_test:
