--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   awesome_notifications: ^0.6.19
   cached_network_image: ^3.2.3
   scrollable_positioned_list: ^0.3.5
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
     - assets/
     - assets/portfolio/chandra/
     - assets/skills/
+    - assets/audio/
 #     - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
