--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.2.3
   scrollable_positioned_list: ^0.3.5
   audioplayers: ^1.0.1
+  animated_toggle_switch: ^0.6.2
 
 dev_dependencies:
   flutter_test:
