--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,17 @@ dependencies:
   timeline_tile: ^2.0.0
   provider: ^6.0.5
   scroll_navigation: ^1.3.2
-  flutter_local_notifications: ^13.0.0
   sizer: ^2.0.15
   awesome_notifications: ^0.6.19
   cached_network_image: ^3.2.3
   scrollable_positioned_list: ^0.3.5
   animated_toggle_switch: ^0.6.2
-#  audioplayers: ^1.0.1
+  audioplayers: ^1.0.1
+  flutter_local_notifications:
+  firebase_core:
+  firebase_messaging:
+  http:
+
 
 
 dev_dependencies:
