--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_core:
   firebase_messaging:
   http:
+  flutter_animate: ^4.1.1+1
+  flutter_native_splash:
+  awesome_dialog: ^3.0.2
 
 
 
@@ -65,7 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  flutter_native_splash:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
