--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_animate: ^4.1.1+1
   flutter_native_splash:
   awesome_dialog: ^3.0.2
+  flutter_colorpicker: ^0.5.0
+
 
 
 
