--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   chat_bubbles: ^1.4.1
   geolocator: ^7.0.1
   geocoding: ^2.0.0
+  battery_plus: ^2.0.2
+  connectivity_plus: ^2.0.2
+  visibility_detector: ^0.2.0
 
 
 
