--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,22 +41,15 @@ dependencies:
   auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
   provider: ^6.0.5
-  scroll_navigation: ^1.3.2
   sizer: ^2.0.15
-  awesome_notifications: ^0.6.19
   cached_network_image: ^3.2.3
-  scrollable_positioned_list: ^0.3.5
-  animated_toggle_switch: ^0.6.2
-#  audioplayers: ^1.0.1
+  audioplayers: ^1.0.1
   flutter_local_notifications:
   firebase_core:
   firebase_messaging:
   http:
   flutter_animate: ^4.1.1+1
   flutter_native_splash:
-  awesome_dialog: ^3.0.2
-  flutter_colorpicker: ^0.5.0
-  chat_bubbles: ^1.4.1
   geolocator: ^7.0.1
   geocoding: ^2.0.0
   battery_plus: ^2.0.2
