--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   intl: ^0.18.1
   cloud_firestore: ^4.8.0
-  youtube_player_flutter: ^8.1.2
+  youtube_player_iframe: ^4.0.4
 
 
 
