portfolio images adding and filtering was done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
   assets:
     - assets/
     - assets/portfolio/chandra/
+    - assets/portfolio/
     - assets/skills/
     - assets/audio/
 #     - images/a_dot_burr.jpeg
