--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
-  google_fonts: ^4.0.3
-  auto_size_text: ^3.0.0
+#  google_fonts: ^4.0.3
+#  auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
   provider: ^6.0.5
-  sizer: ^2.0.15
   cached_network_image: ^3.2.3
   audioplayers: ^1.0.1
   flutter_local_notifications:
@@ -59,8 +58,6 @@ dependencies:
   cloud_firestore: ^4.8.0
   youtube_player_iframe: ^4.0.4
   video_player:
-  confetti: ^0.7.0
-  carousel_slider: ^4.2.1
 
 
 
@@ -76,7 +73,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  flutter_native_splash:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
