--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
-#  google_fonts: ^4.0.3
+  google_fonts: ^4.0.3
 #  auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
   provider: ^6.0.5
