--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.6 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,7 +42,7 @@ dependencies:
   timeline_tile: ^2.0.0
   provider: ^6.0.5
   cached_network_image: ^3.2.3
-  audioplayers: ^1.0.1
+#  audioplayers: ^1.0.1
   flutter_local_notifications:
   firebase_core:
   firebase_messaging:
@@ -61,7 +61,8 @@ dependencies:
   rive: ^0.11.4
   shared_preferences: ^2.0.10
   url_launcher:
-
+  device_info:
+  flutter_screenutil: ^5.0.0
 
 
 
@@ -69,6 +70,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.0
+  fake_async: ^1.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
