--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.13.0'
-
-      - name: Run Flutter Tests
-        run: flutter test
+#
+#      - name: Run Flutter Tests
+#        run: flutter test
 
       - name: Build Web
         run: flutter build web --release --no-tree-shake-icons
