--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <4.0.0'
+  sdk: '>=3.3.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
-  google_fonts: ^4.0.3
+  google_fonts: ^6.2.1
 #  auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
   provider: ^6.0.5
@@ -48,23 +48,24 @@ dependencies:
   firebase_messaging:
   http:
   flutter_animate: ^4.1.1+1
-  geolocator: ^7.0.1
-  geocoding: ^2.0.0
-  battery_plus: ^2.0.2
-  connectivity_plus: ^2.0.2
-  visibility_detector: ^0.2.0
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  battery_plus: ^5.0.3
+  connectivity_plus: ^5.0.2
+  visibility_detector: ^0.4.0+2
   flutter_cache_manager: ^3.3.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   cloud_firestore: ^4.8.0
-  youtube_player_iframe: ^4.0.4
+  youtube_player_iframe: ^5.1.1
   video_player:
-  rive: ^0.11.4
+  rive: ^0.13.1
   shared_preferences: ^2.0.10
   url_launcher:
   device_info:
   flutter_screenutil: ^5.0.0
   client_information: ^2.1.3
   animated_text_kit: ^4.2.2
+  get: ^4.6.6
 
 
 
@@ -80,7 +81,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
